# RPLIDAR_M2M1_jetson

./: README.md  both_make_and_run.sh  cmake.sh  make.sh  mapdemo.py  run_mapdemo.sh
example/: plot_potential_field.py
install_M2M1/: CMakeLists.txt  install.sh
slamware_sdk_linux-aarch64-gcc7/: compiler_version.txt  mak_def.inc
slamware_sdk_linux-aarch64-gcc7/linux-aarch64-release/: CMakeLists.txt
slamware_sdk_linux-aarch64-gcc7/samples/mapdemo/: Makefile
slamware_sdk_linux-aarch64-gcc7/samples/mapdemo/src/: main_pybind11.cpp
slamware_sdk_linux-aarch64-gcc7/samples/moveandpathdemo/src/: main.cpp
